<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hyper.design.medicalcard.Activities.ContactUs">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:background="@color/colorGreen"
        android:minHeight="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:id="@+id/toolbar"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="140dp"
            android:layout_height="82dp"
            android:layout_gravity="center"
            android:layout_margin="52dp"
            app:srcCompat="@drawable/medical_card_logo" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/contact_me_username"
            android:inputType="textPersonName"
            android:backgroundTint="@color/colorGreen"/>


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contact_me_email"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/colorGreen"/>


        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contact_me_phone"
            android:inputType="number"
            android:backgroundTint="@color/colorGreen"/>


        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/contact_me_message"
            android:inputType="textAutoComplete"
            android:backgroundTint="@color/colorGreen"/>

        <Button
            android:id="@+id/btn_send_message"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/contact_me_button"
            android:textColorHint="@color/colorWhite"
            android:textStyle="bold"
            android:backgroundTint="@color/colorGreen"/>

    </LinearLayout>

</LinearLayout>
