<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    tools:context="com.hyper.design.medicalcard.Activities.BlogDetails">

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:background="@color/colorGreen"
        android:minHeight="?attr/actionBarSize"
        android:fitsSystemWindows="true"
        android:id="@+id/toolbar"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/sv_blog_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="true">

        <LinearLayout
            android:id="@+id/ll_blog_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_blog_item"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/blogging" />

            <TextView
                android:id="@+id/tv_title_blog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/blog_title"
                android:textSize="34sp"
                android:textStyle="bold" />
            <!--android:drawableLeft="@drawable/blog_comment"
                android:drawablePadding="10dp"-->

            <TextView
                android:id="@+id/tv_blog_written_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/blog_written_by"
                android:textSize="18sp"
                android:textStyle="italic" />
            <!--
            android:drawableLeft="@drawable/blogger"
            android:drawablePadding="10dp"-->

            <TextView
                android:id="@+id/tv_blog_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/blog_date"
                android:textSize="16sp"
                android:textStyle="italic" />
            <!--
            android:drawableLeft="@drawable/calendar"
            android:drawablePadding="10dp"-->

            <TextView
                android:id="@+id/tv_blog_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/nav_header_vertical_spacing"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/blog_details"
                android:textSize="16sp"
                android:textStyle="italic" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>
